2012-01-28  Chris Metcalf  <cmetcalf@tilera.com>

	* sysdeps/unix/sysv/linux/faccessat.c (faccessat): Call __fxstatat64.

2012-05-01  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #14040]
	* sysdeps/powerpc/powerpc32/fpu/s_nearbyint.S (nearbyintl): Define
	in version GLIBC_2.1, not GLIBC_2.0.
	* sysdeps/powerpc/powerpc64/fpu/s_nearbyint.S (nearbyintl):
	Likewise.

2012-10-04  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14648]
	* sysdeps/x86_64/multiarch/init-arch.c (__init_cpu_features):
	Set bit_FMA_Usable if FMA is supported.
	* sysdeps/x86_64/multiarch/init-arch.h (bit_FMA_Usable): New
	macro.
	(bit_FMA4_Usable): Updated.
	(index_FMA_Usable): New macro.
	(CPUID_FMA): Likewise
	(HAS_FMA): Defined with bit_FMA_Usable.

2012-09-25  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14621]
	* posix/glob.c (next_brace_sub): Use size_t instead of unsigned
	int as type of variable DEPTH.
	(glob): Use size_t instead of int as type of variables NEWCOUNT
	and OLD_PATHC.

2012-08-27  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14459]
	* stdlib/strtod_l.c: Include <stdint.h>.
	(NDEBUG): Do not define.
	(round_and_return): Change EXPONENT parameter to type intmax_t.
	Rearrange calculations to avoid internal overflow possibilities.
	(str_to_mpn): Change EXPONENT parameter to type intmax_t *.
	Rearrange calculations to avoid internal overflow possibilities.
	Assert that number fits inside MPNSIZE limbs.
	(____STRTOF_INTERNAL): Change EXPONENT variable to type intmax_t.
	Change DIG_NO, INT_NO and LEAD_ZERO to type size_t.  Rearrange
	calculations and add assertions to avoid internal overflow
	possibilities.  Add casts to avoid signed/unsigned operations.
	* stdlib/tst-strtod-overflow.c: New file.
	* stdlib/Makefile (tests): Add tst-strtod-overflow.

2012-01-28  Chris Metcalf  <cmetcalf@tilera.com>

	* sysdeps/unix/sysv/linux/faccessat.c (faccessat): Call __fxstatat64.

2012-01-28  Chris Metcalf  <cmetcalf@tilera.com>

	* include/sys/epoll.h: New file.